--- a/dev/assets/css/master.css
+++ b/dev/assets/css/master.css
@@ -3,6 +3,36 @@
 /* light grey - DADBD8 */
 /* slate - 4F5456 */
 
+.hamburger-button {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    height: 2rem ;
+    margin: 2rem 0;
+    width: 8rem ;
+}
+
+.hamburger-container {
+    height: 8rem;
+    margin-left: 2rem;
+    max-height: 15vh;
+    max-width: 15vw;
+    position: absolute !important;
+    width: 8rem;
+    z-index: 100;
+}
+
+.hamburger-menu-dropdown {
+    display: none;
+    height: 100vh;
+    padding-top: 3rem;
+    position: relative;
+    top: -1rem;
+    width: 100vw;
+    z-index: 200;
+}
+
 .header-footer-container{
     display: flex;
     justify-content: space-around;
@@ -10,24 +40,45 @@
     min-width: 100vw;
 }
 
+.index-page-content {
+    display: block;
+}
+
+.nav-link-text {
+    text-align: center;
+}
+
 .nav-logo {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
     display: flex;
-    height: 8rem ;
+    height: 4rem ;
+    margin: 2rem 0 2rem;
     width: 8rem ;
 }
 
 /* media queries */
 
+@media only screen and (max-width: 425px) {
+    .hamburger-button {
+        padding: 1rem;
+    }
+}
+
 @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    .header-footer-container{
-        min-height: 20vw;
+    .desktop-nav * {
+        display: none;
     }
 
-    #desktopNav * {
+    .nav-logo {
+        margin: 1rem 0;
+    }
+}
+
+@media only screen and (min-width: 769px) {
+    /* For mobile phones: */
+    .hamburger-container {
         display: none;
     }
 }
