--- a/dev/assets/css/master.css
+++ b/dev/assets/css/master.css
@@ -3,6 +3,13 @@
 /* light grey - DADBD8 */
 /* slate - 4F5456 */
 
+.footer-container-menu {
+    bottom: -45%;
+    left: -1rem;
+    position: relative;
+    width: 100vw;
+}
+
 .hamburger-button {
     background-position: center;
     background-repeat: no-repeat;
@@ -25,7 +32,7 @@
 
 .hamburger-menu-dropdown {
     display: none;
-    height: 100vh;
+    height: 85vh;
     padding-top: 3rem;
     position: relative;
     top: -1rem;
@@ -56,6 +63,22 @@
     height: 4rem ;
     margin: 2rem 0 2rem;
     width: 8rem ;
+}
+
+.footer-container-page {
+    position: absolute;
+    bottom: 0;
+    z-index: 300;
+}
+
+.social-icon {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    height: 3rem;
+    width: 3rem;
+
 }
 
 /* media queries */
