basic layout for blogs w/ real content, reordered script enqueueing

--- a/dev/assets/css/master.css
+++ b/dev/assets/css/master.css
@@ -81,6 +81,10 @@
     width: 3rem;
 }
 
+figure:first-child {
+    display: none;
+}
+
 /* media queries */
 
 @media only screen and (max-width: 425px) {
