added max-width to text header, index pg renders services

--- a/dev/assets/css/master.css
+++ b/dev/assets/css/master.css
@@ -159,8 +159,12 @@
     column-gap: 1.5rem;
 }
 
-.header-text-logo:hover {
+.header-text-link:hover {
     text-decoration: none;
+}
+
+.header-text-type {
+    max-width: 75%; 
 }
 
 /* media queries */
